--- a/notes.org
+++ b/notes.org
@@ -6,7 +6,7 @@
 
 *** DONE Registrar tempo do algoritmo usando tasks em uma imagem e em varias imagens
 Tempo para uma imagem (1.gif):
-| no. threads | tempo (s) |
+| no. threads | time (s) |
 |-------------+-----------|
 | 1           | 1.75      |
 | 2           | 0.93      |
@@ -18,7 +18,7 @@ nao mudou muito.
 
 *** DONE Registrar tempo do algoritmo usando #pragma omp for
 Tempo para uma imagem (1.gif) com scheduling estatico:
-| no. threads | tempo (s) |
+| no. threads | time (s) |
 |-------------+-----------|
 | 1           | 1.77      |
 | 2           | 0.93      |
@@ -26,7 +26,7 @@ Tempo para uma imagem (1.gif) com scheduling estatico:
 | 4           | 0.49      |
 
 Tempo para uma imagem (1.gif) com scheduling dinamico:
-| no. threads | tempo (s) |
+| no. threads | time (s) |
 |-------------+-----------|
 |           1 |       2.6 |
 |           2 |      2.11 |
@@ -34,7 +34,7 @@ Tempo para uma imagem (1.gif) com scheduling dinamico:
 |           4 |      1.41 |
 
 Tempo para uma imagem (1.gif) com scheduling guiado (guided):
-| no. threads | tempo (s) |
+| no. threads | time (s) |
 |-------------+-----------|
 |           1 |      1.78 |
 |           2 |      0.94 |
@@ -48,7 +48,7 @@ Podemos dizer que o speed-up foi de 1.77 / 0.48 = 3.7 para o blur filter.
 ** DONE Otimizar gray filter
 
 Resultados em 1 imagem (1.gif) usando taskloops:
-| no. threads | tempo (s) |
+| no. threads | time (s) |
 |-------------+-----------|
 |           1 |    0.0200 |
 |           2 |    0.0176 |
@@ -56,7 +56,7 @@ Resultados em 1 imagem (1.gif) usando taskloops:
 |           4 |    0.0140 |
 
 Resultados no test set usando "omp taskloop":
-| no. threads | tempo (s) |
+| no. threads | time (s) |
 |-------------+-----------|
 |           1 |     1.141 |
 |           2 |     0.583 |
@@ -64,7 +64,7 @@ Resultados no test set usando "omp taskloop":
 |           4 |     0.318 |
 
 Resultados em 1 imagem (1.gif) usando "omp for collapse(2) nowait":
-| no. threads | tempo (s) |
+| no. threads | time (s) |
 |-------------+-----------|
 |           1 |    0.0147 |
 |           2 |    0.0143 |
@@ -72,7 +72,7 @@ Resultados em 1 imagem (1.gif) usando "omp for collapse(2) nowait":
 |           4 |    0.0128 |
 
 Resultados no test set usando "omp for collapse(2) nowait":
-| no. threads | tempo (s) |
+| no. threads | time (s) |
 |-------------+-----------|
 |           1 |     1.742 |
 |           2 |     0.931 |
@@ -84,7 +84,7 @@ Resultados no test set usando "omp for collapse(2) nowait":
 ** DONE Otimizar sobel filter
 
 Resultado no test set usando taskloops:
-| no. threads | tempo (s) |
+| no. threads | time (s) |
 |-------------+-----------|
 |           1 |      8.32 |
 |           2 |      5.25 |
@@ -92,7 +92,7 @@ Resultado no test set usando taskloops:
 |           4 |      3.39 |
 
 Resultado no test set usando for loops:
-| no. threads | tempo (s) |
+| no. threads | time (s) |
 |-------------+-----------|
 |           1 |      8.09 |
 |           2 |      4.33 |
