--- a/mpi_omp.org
+++ b/mpi_omp.org
@@ -1,5 +1,5 @@
 *Resultados*:
-| OMP threads | MPI procs | tempo (s) |
+| OMP threads | MPI procs | time (s) |
 |-------------+-----------+-----------|
 |           1 |         1 |     84.65 |
 |           1 |         2 |     47.35 |
